--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    margin: auto;
   }
 
   .card__heading {
@@ -180,6 +181,8 @@ body {
 }
 /*  End custom Framework */
 
-
-.attribution { font-size: 11px; text-align: center; }
+footer {
+  margin-bottom: 2rem;
+}
+.attribution { font-size: 14px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
